--- a/package.json
+++ b/package.json
@@ -11,11 +11,10 @@
   },
   "dependencies": {
     "@aws-amplify/auth": "^6.13.0",
-    "@aws-amplify/core": "^6.12.0",
     "@aws-amplify/pubsub": "^6.1.56",
+    "@aws-sdk/client-iot": "^3.830.0",
+    "@aws-sdk/credential-provider-cognito-identity": "^3.830.0",
     "aws-amplify": "^6.15.0",
-    "aws-iot-device-sdk": "^2.2.15",
-    "mqtt": "^5.13.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
